complete CRUD demo with REST API

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+  
+##JDBC properties for connecting
+#springboot will automatically create datasource and entity manager beans
+spring.datasource.url=jdbc:mysql://localhost:3306/employee_directory?useSSL=false&serverTimezone=UTC
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
 
+#
+# Spring Data REST properties
+#
+
+spring.data.rest.base-path=/magic-api
+#number of elements per page
+spring.data.rest.default-page-size=3 
